--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-# app
-sqlalchemy
-flask
-psycopg2-binary
-requests
-html5lib
-bs4
-lxml
-bpython
-
-# tests
-pytest
-pytest-icdiff
-mypy
+click==8.1.3
+Flask==2.1.2
+greenlet==1.1.2
+gunicorn==20.1.0
+importlib-metadata==4.11.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+psycopg2==2.9.3
+SQLAlchemy==1.4.37
+Werkzeug==2.1.2
+zipp==3.8.0
